--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -1,22 +1,27 @@
-.App {
-  text-align: center;
+.App{
+  min-height: 100 vh;
+  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
 }
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-form{
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+.search-bar{
+  width: 50%;
+  border: none;
+  padding: 10px;
+}
+.search-button{
+  background: rgb(212, 72, 114);
+  border: none;
+  padding: 10px 12px;
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.recipes{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
